finalized index based quick sort

--- a/quicksort_compare/Makefile
+++ b/quicksort_compare/Makefile
@@ -1,10 +1,10 @@
 all: main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o
 	g++ -o main main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o
 
-main.o: main.cc utils.h user_input.h
+main.o: main.cc utils.h user_input.h  generic_quick_sort.h index_based_quick_sort.h
 	g++ -c main.cc
 
-index_based_quick_sort.o: index_based_quick_sort.cc index_based_quick_sort.h
+index_based_quick_sort.o: index_based_quick_sort.cc index_based_quick_sort.h generic_quick_sort.h
 	g++ -c index_based_quick_sort.cc
 
 generic_quick_sort.o: generic_quick_sort.cc generic_quick_sort.h
