fixing random number generator

--- a/quicksort_compare/Makefile
+++ b/quicksort_compare/Makefile
@@ -4,7 +4,7 @@ all: main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o r
 main.o: main.cc utils.h user_input.h  generic_quick_sort.h index_based_quick_sort.h random_pivot_quick_sort.o
 	g++ -c main.cc
 
-random_pivot_quick_sort.o: random_pivot_quick_sort.cc random_pivot_quick_sort.h
+random_pivot_quick_sort.o: random_pivot_quick_sort.cc random_pivot_quick_sort.h utils.h
 	g++ -c random_pivot_quick_sort.cc -std=c++11
 
 index_based_quick_sort.o: index_based_quick_sort.cc index_based_quick_sort.h generic_quick_sort.h
