implementing pointer based quick sort

--- a/quicksort_compare/Makefile
+++ b/quicksort_compare/Makefile
@@ -1,7 +1,7 @@
-all: main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o
-	g++ -o main main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o
+all: main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o
+	g++ -o main main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o
 
-main.o: main.cc utils.h user_input.h  generic_quick_sort.h index_based_quick_sort.h random_pivot_quick_sort.o
+main.o: main.cc utils.h user_input.h  generic_quick_sort.h index_based_quick_sort.h random_pivot_quick_sort.h pointer_based_quick_sort.h
 	g++ -c main.cc
 
 random_pivot_quick_sort.o: random_pivot_quick_sort.cc random_pivot_quick_sort.h utils.h
@@ -9,6 +9,9 @@ random_pivot_quick_sort.o: random_pivot_quick_sort.cc random_pivot_quick_sort.h 
 
 index_based_quick_sort.o: index_based_quick_sort.cc index_based_quick_sort.h generic_quick_sort.h
 	g++ -c index_based_quick_sort.cc
+
+pointer_based_quick_sort.o: pointer_based_quick_sort.cc pointer_based_quick_sort.h generic_quick_sort.h
+	g++ -c pointer_based_quick_sort.cc
 
 generic_quick_sort.o: generic_quick_sort.cc generic_quick_sort.h
 	g++ -c generic_quick_sort.cc -std=c++11
