implementing quick sort version that uses less memory

--- a/quicksort_compare/Makefile
+++ b/quicksort_compare/Makefile
@@ -1,8 +1,11 @@
-all: main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o
-	g++ -o main main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o
+all: main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o memory_quick_sort.o
+	g++ -o main main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o memory_quick_sort.o
 
-main.o: main.cc utils.h user_input.h  generic_quick_sort.h index_based_quick_sort.h random_pivot_quick_sort.h pointer_based_quick_sort.h
+main.o: main.cc utils.h user_input.h  generic_quick_sort.h index_based_quick_sort.h random_pivot_quick_sort.h pointer_based_quick_sort.h memory_quick_sort.h
 	g++ -c main.cc
+
+memory_quick_sort.o: memory_quick_sort.cc memory_quick_sort.h generic_quick_sort.h
+	g++ -c memory_quick_sort.cc
 
 random_pivot_quick_sort.o: random_pivot_quick_sort.cc random_pivot_quick_sort.h utils.h
 	g++ -c random_pivot_quick_sort.cc -std=c++11
