finalizing BFPRT quick sort compare

--- a/quicksort_compare/Makefile
+++ b/quicksort_compare/Makefile
@@ -1,7 +1,7 @@
-all: main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o memory_quick_sort.o
-	g++ -o main main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o memory_quick_sort.o
+all: main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o memory_quick_sort.o bfprt_quick_sort.o
+	g++ -o main main.o utils.o user_input.o generic_quick_sort.o index_based_quick_sort.o random_pivot_quick_sort.o pointer_based_quick_sort.o memory_quick_sort.o bfprt_quick_sort.o
 
-main.o: main.cc utils.h user_input.h  generic_quick_sort.h index_based_quick_sort.h random_pivot_quick_sort.h pointer_based_quick_sort.h memory_quick_sort.h
+main.o: main.cc utils.h user_input.h  generic_quick_sort.h index_based_quick_sort.h random_pivot_quick_sort.h pointer_based_quick_sort.h memory_quick_sort.h bfprt_quick_sort.h
 	g++ -c main.cc
 
 memory_quick_sort.o: memory_quick_sort.cc memory_quick_sort.h generic_quick_sort.h
@@ -18,6 +18,9 @@ pointer_based_quick_sort.o: pointer_based_quick_sort.cc pointer_based_quick_sort
 
 generic_quick_sort.o: generic_quick_sort.cc generic_quick_sort.h
 	g++ -c generic_quick_sort.cc -std=c++11
+
+bfprt_quick_sort.o: bfprt_quick_sort.cc bfprt_quick_sort.h generic_quick_sort.h
+	g++ -c bfprt_quick_sort.cc
 
 utils.o: utils.cc utils.h
 	g++ -c utils.cc -std=c++11
