generating instances of type WorstCase1 and WorstCase2

--- a/subsequence_search/Makefile
+++ b/subsequence_search/Makefile
@@ -1,8 +1,11 @@
-all: main.o user_input.o
-	g++ -o main main.o user_input.o
+all: main.o user_input.o utils.o
+	g++ -o main main.o user_input.o utils.o
 
-main.o: main.cc
+main.o: main.cc utils.h
 	g++ -c main.cc
 
 user_input.o: user_input.cc user_input.h
 	g++ -c user_input.cc
+
+utils.o: utils.cc utils.h user_input.h
+	g++ -c utils.cc
