--- a/subsequence_search/Makefile
+++ b/subsequence_search/Makefile
@@ -1,5 +1,5 @@
-all: main.o user_input.o utils.o instance_generator.o
-	g++ -o main main.o user_input.o utils.o instance_generator.o
+all: main.o user_input.o utils.o instance_generator.o subsequence_search.o
+	g++ -o main main.o user_input.o utils.o instance_generator.o subsequence_search.o
 
 main.o: main.cc instance_generator.h
 	g++ -c main.cc
@@ -12,3 +12,6 @@ utils.o: utils.cc utils.h
 
 instance_generator.o: instance_generator.cc instance_generator.h utils.h real_instances.h user_input.h instance.h
 	g++ -c instance_generator.cc
+
+subsequence_search.o: subsequence_search.cc subsequence_search.h
+	g++ -c subsequence_search.cc
