(huffman encoding) implementing minimum heap tree

--- a/huffman_coding/Makefile
+++ b/huffman_coding/Makefile
@@ -1,7 +1,7 @@
-all: main.o user_input.o utils.o
-	g++ -o main main.o user_input.o utils.o
+all: main.o user_input.o utils.o min_heap.o
+	g++ -o main main.o user_input.o utils.o min_heap.o
 
-main.o: main.cc user_input.h utils.h
+main.o: main.cc user_input.h utils.h min_heap.h
 	g++ -c main.cc
 
 utils.o: utils.cc utils.h
@@ -9,3 +9,6 @@ utils.o: utils.cc utils.h
 
 user_input.o: user_input.cc user_input.h
 	g++ -c user_input.cc
+
+min_heap.o: min_heap.cc min_heap.h node.h
+	g++ -c min_heap.cc
