(avl tree) fixing delete

--- a/avl_tree/Makefile
+++ b/avl_tree/Makefile
@@ -2,7 +2,7 @@ all: main.o avl.o
 	g++ -o main main.o avl.o
 
 main.o: main.cc avl.hpp
-	g++ -c main.cc
+	g++ -c main.cc -std=c++11
 
 
 avl.o: avl.cpp avl.hpp
